# RamDoc

./: .CLAUDE.md.swp  .gitignore  .typos.toml  CODEOWNERS  CONTRIBUTING.md  PKG5_IMPLEMENTATION.md  README.md  SECURITY.md  TESTING.md  ci-local.sh  package.json
.githooks/: pre-commit
.github/: ACTIONS_QUICK_REFERENCE.md  AUTOMATION.md  CI_CD_DOCUMENTATION.md  RELEASE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-label.yml  auto-merge.yml  auto-rebase-dependabot.yml  auto-release.yml  codeql.yml  coverage.yml  frontend-ci.yml  lint.yml  medication_ref.yml  release.yml  rust-ci.yml  security.yml  tauri-build.yml
docs/: model-sha-investigation-summary.md  model-sha-verification.md  outcome-scores.md  usability-study.md
dokassist/: .gitignore  PKG-6-COMPLETION-SUMMARY.md  PKG-6-IMPLEMENTATION.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dokassist/src/: app.html
dokassist/src-tauri/: ACCEPTANCE_CRITERIA.md  Cargo.toml  PKG2_IMPLEMENTATION.md  SECURITY.md  build.rs  deny.toml  entitlements.plist  tauri.conf.json
dokassist/src-tauri/.claude/agent-memory/svelte-frontend-expert/: MEMORY.md  feedback_warning_fixes.md  user_profile.md
dokassist/src-tauri/.claude/agents/: security-advisor.md  svelte-frontend-expert.md
dokassist/src-tauri/capabilities/: default.json
dokassist/src-tauri/examples/: test_audit.rs
dokassist/src-tauri/icons/: icon.icns
dokassist/src-tauri/src/: audit.rs  constants.rs  crypto.rs  database.rs  error.rs  filesystem.rs  integration_tests.rs  keychain.rs  lib.rs  recovery.rs  search.rs  spotlight.rs  state.rs  touch_id.m  touch_id.rs
dokassist/src-tauri/src/commands/: audit.rs  auth.rs  backup.rs  compendium.rs  dashboard.rs  diagnoses.rs  emails.rs  export.rs  fhir_export.rs  files.rs  import.rs  letters.rs  literature.rs  llm.rs  medication_reference.rs  medications.rs  mod.rs  models.rs  outcome_scores.rs  patients.rs  reports.rs  search.rs  sessions.rs  settings.rs  treatment_plans.rs  updater.rs
dokassist/src-tauri/src/llm/: agent.rs  chunk.rs  download.rs  embed.rs  engine.rs  extract.rs  mod.rs  patient_context.rs  prompts.rs  report.rs  sanitize.rs  tools.rs  utf8.rs
dokassist/src-tauri/src/medication_reference/: download.rs  mod.rs
dokassist/src-tauri/src/migrations/: 001_initial.sql  002_audit_append_only.sql  003_compendium.sql  003_embeddings.sql  005_literature.sql  007_treatment_plans.sql  008_outcome_scores.sql  009_sessions_scheduled_time.sql  010_clinical_summary.sql  010_model_registry.sql  012_letters.sql  013_practice_settings.sql
dokassist/src-tauri/src/models/: compendium.rs  diagnosis.rs  email.rs  file_record.rs  import.rs  letter.rs  literature.rs  medication.rs  mod.rs  model.rs  outcome_score.rs  patient.rs  report.rs  session.rs  settings.rs  treatment_plan.rs
dokassist/src-tauri/src/models/fhir/: mod.rs
dokassist/src/lib/: amdp.ts  api.ts
dokassist/src/lib/components/: AMDPCategory.svelte  AMDPForm.svelte  AMDPItem.svelte  AhvInput.svelte  ChatMessage.svelte  ChatSessionList.svelte  ChatThread.svelte  CommandPalette.svelte  DiagnosisCard.svelte  EnhancedReportEditor.svelte  ErrorDisplay.svelte  FileCard.svelte  FileUploader.svelte  FileViewer.svelte  IcdSearch.svelte  MedicationAutocomplete.svelte  MedicationChangeAssistant.svelte  MedicationComparisonPanel.svelte  MedicationForm.svelte  MedicationInfoPanel.svelte  MnemonicDisplay.svelte  OutcomeScoreCard.svelte  OutcomeScoreForm.svelte  OutcomeScoreTrendChart.svelte  PatientCard.svelte  PatientForm.svelte  PatientHistoryQuery.svelte  PatientTabs.svelte  ReportEditor.svelte  ReportStream.svelte  ReportTypeSelector.svelte  SessionCard.svelte  Sidebar.svelte  Toast.svelte  TopBar.svelte  UpdateNotification.svelte
dokassist/src/lib/stores/: auth.ts  language.ts  theme.ts  toast.ts
dokassist/src/lib/translations/: de.json  en.json  index.ts
dokassist/src/routes/: +layout.svelte  +page.svelte
dokassist/src/routes/calendar/: +page.svelte
dokassist/src/routes/chat/: +page.svelte
dokassist/src/routes/dashboard/: +page.svelte
dokassist/src/routes/literature/: +page.svelte
dokassist/src/routes/patients/: +page.svelte
dokassist/src/routes/recover/: +page.svelte
dokassist/src/routes/settings/: +page.svelte
dokassist/src/routes/setup/: +page.svelte
dokassist/src/routes/unlock/: +page.svelte
dokassist/src/tests/: setup.ts
dokassist/src/tests/components/: AhvInput.test.ts  ChatMessage.test.ts  ChatSessionList.test.ts  ChatThread.test.ts  EmailCompose.test.ts  PatientForm.test.ts  ReportStream.test.ts  ReportView.test.ts  (+2 more)
dokassist/static/: icd10gm.json
scripts/: build_medication_ref.py  verify_model_urls.sh
(+28 files in other folders)
