[package]
name = "dokassist"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "dokassist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

# IDs and time
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto (PKG-1)
security-framework = "3"
aes-gcm = "0.10"
ring = "0.17"
argon2 = "0.5"
bip39 = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10"
hex = "0.4"

# Database (PKG-2)
rusqlite = { version = "0.38", features = ["bundled-sqlcipher", "vtab"] }

# LLM (PKG-4)
llama_cpp = { version = "0.3" }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
libc = "0.2"
dirs = "6"

# PDF (PKG-3)
pdf-extract = "0.7"

[features]
# Enable Metal GPU acceleration for llama.cpp on Apple Silicon.
# Pass --features metal to cargo / tauri build when targeting aarch64-apple-darwin.
# Omit when cross-compiling to x86_64-apple-darwin: the Metal shader library is
# embedded as a host-arch object file, which breaks the x86_64 link step.
metal = ["llama_cpp/metal"]

[dev-dependencies]
tempfile = "3"
