[package]
name = "dokassist"
version = "0.9.0"
edition = "2021"
rust-version = "1.88"

[lib]
name = "dokassist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

# IDs and time
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto (PKG-1)
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"
aes-gcm = "0.10"
ring = "0.17"
argon2 = "0.5"
bip39 = "2"
zeroize = { version = "1", features = ["derive"] }
rand = "0.10"
hex = "0.4"

# Database (PKG-2)
rusqlite = { version = "0.39", features = ["bundled-sqlcipher", "vtab"] }

# LLM (PKG-4)
llama-cpp-2 = { version = "0.1" }
encoding_rs = "0.8"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
libc = "0.2"
dirs = "6"

# PDF (PKG-3)
pdf-extract = "0.10"

# Embeddings (PKG-semantic-search)
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries", "hf-hub"] }

# Medication reference DB integrity
minisign-verify = "0.2"

# Export
zip = "8"
printpdf = "0.9"
docx-rs = "0.4"
pulldown-cmark = { version = "0.12", default-features = false }

# CSV Import
csv = "1"

[features]
# Enable Metal GPU acceleration for llama.cpp on Apple Silicon.
# Pass --features metal to cargo / tauri build when targeting aarch64-apple-darwin.
# Omit when cross-compiling to x86_64-apple-darwin: the Metal shader library is
# embedded as a host-arch object file, which breaks the x86_64 link step.
metal = ["llama-cpp-2/metal"]

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
